--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,8 @@
                 <h2>TextUtils</h2>
                 <p>This is my first React Project using react js and bootstrap . <strong>(WebPage)</strong> that i made.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sint recusandae laborum eligendi, esse tempore eum, culpa in, est consequuntur fuga sit. Rerum sed quis illum itaque. Reiciendis, veritatis exercitationem?</p>
                <div>
-                <a href="#" class="herobtn">Check Out</a>
-                <a href="#" class="herobtn newtab">GitHub <i class="fa fa-external-link"></i></a>
+                <a href="https://mani-monga.github.io/TextUtils-React/" class="herobtn">Check Out</a>
+                <a href="https://github.com/mani-monga/TextUtils-React" class="herobtn newtab" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
                </div>
             </div>
         </div>
@@ -73,8 +73,8 @@
                 <h2>College Website</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sint recusandae laborum eligendi, esse tempore eum, culpa in, est consequuntur fuga sit. Rerum sed quis illum itaque. Reiciendis, veritatis exercitationem?</p>
                 <div>
-                    <a href="#" class="herobtn">Check Out</a>
-                    <a href="#" class="herobtn newtab">GitHub <i class="fa fa-external-link"></i></a>
+                    <a href="https://github.com/mani-monga/GTBIT" class="herobtn">Check Out</a>
+                    <a href="https://mani-monga.github.io/GTBIT" class="herobtn newtab" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
                    </div>
                 </div>
                 <div class="webimage">
@@ -102,8 +102,8 @@
                 <h2>EduWiz</h2>
                 <p><strong>A WebPage For NGO.I tried to add payment gateaway</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sint recusandae laborum eligendi, esse tempore eum, culpa in, est consequuntur fuga sit. Rerum sed quis illum itaque. Reiciendis, veritatis exercitationem?</p>
                 <div>
-                    <a href="#" class="herobtn">Check Out</a>
-                    <a href="#" class="herobtn newtab">GitHub <i class="fa fa-external-link"></i></a>
+                    <a href="https://mani-monga.github.io/eduwiz/" class="herobtn">Check Out</a>
+                    <a href="https://github.com/mani-monga/eduwiz" class="herobtn newtab" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
                 </div>
             </div>
             <div class="webimage">
@@ -119,8 +119,8 @@
                 <h2>Gym WebPage</h2>
                 <p>This is my first single page website <strong>(WebPage)</strong> that i made.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sint recusandae laborum eligendi, esse tempore eum, culpa in, est consequuntur fuga sit. Rerum sed quis illum itaque. Reiciendis, veritatis exercitationem?</p>
                <div>
-                <a href="#" class="herobtn">Check Out</a>
-                <a href="#" class="herobtn newtab">GitHub <i class="fa fa-external-link"></i></a>
+                <a href="https://mani-monga.github.io/FitnessFreak/" class="herobtn">Check Out</a>
+                <a  href="https://github.com/mani-monga/FitnessFreak"class="herobtn newtab" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
                </div>
             </div>
 
