--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="navbar">
       <ul>
         <li><a href="https://linktr.ee/ManiMonga" target="_blank">About <i class="fa fa-info-circle"></i></a></li>
-        <li><a href="../projects.html">Projects <i class="fa fa-laptop"></i></a></li>
+        <li><a href="./projects.html">Projects <i class="fa fa-laptop"></i></a></li>
         <li><a href="tel:8394079521">Phone <i class="fa fa-phone"></i></a></li>
         <li><a href="mailto:mni.monga02@gmail.com">Mail <i class="fa fa-envelope"></i></a></li>
       </ul>
