--- a/projects.html
+++ b/projects.html
@@ -14,8 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/projects.css">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/projects.css">
+    
 </head>
 
 <body>
