--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="header">
     <div class="logo">
-      <img id="imge" src="../navbar logo.jpg" alt="">
+      <img id="imge" src="./navbar logo.jpg" alt="">
     </div>
 
     <div class="navbar">
