--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
-  <title>Document</title>
+<link rel="shortcut icon" href="./profiel.png" type="image/x-icon">
+  <title>Mani's Portfolio | HOME</title>
 </head>
 
 <body>
