--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/projects.css">
-    <title>Document</title>
+    <title>Mani's Portfolio | PROJECTS</title>
     
 </head>
 
