finalised with mobile resonsive

--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 
   <section class="header">
     <div class="logo">
-      <img id="imge" src="./navbar logo.jpg" alt="">
+      <h2>Mani Monga</h2>
+      <button class="menubtn" id="burger">
+        <div></div>
+      </button>
     </div>
 
     <div class="navbar">
-      <ul>
+      <ul id="list">
         <li><a href="https://linktr.ee/ManiMonga" target="_blank">About <i class="fa fa-info-circle"></i></a></li>
         <li><a href="./projects.html">Projects <i class="fa fa-laptop"></i></a></li>
         <li><a href="tel:8394079521">Phone <i class="fa fa-phone"></i></a></li>
@@ -47,14 +50,15 @@
     <div class="intro">
     <h1 >Hi <br></h1>
     <h2 >This is me, Mani Monga <br></h2>
-    <span >This is my profile. I am a tech enthuciast.Currently I am working with Web Development. You can have a look on my projects  <br></span>
-    <button class="herobtn">
+    <p >This is my profile. I am a tech enthuciast.Currently I am working with Web Development. You can have a look on my projects  <br></p>
+    <div class="btnbdy"><button class="herobtn">
       Projects
-    </button>
+    </button></div>
     </div>
 
     <div class="image">
       <img src="./profiel.png" alt="">
+      <div class="imgtxt">28-02-2002</div>
     </div>
   </section>
   <nav class="social">
@@ -66,7 +70,7 @@
       <li class="git"><a href="https://github.com/mani-monga" target="_">GitHub <i class="fa fa-github"></i></a></li>
     </ul>
   </nav>
-
 </body>
+<script src="./js/index.js"></script>
 
 </html>
