--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1 >Hi <br></h1>
     <h2 >This is me, Mani Monga <br></h2>
     <p >This is my profile. I am a tech enthuciast.Currently I am working with Web Development. You can have a look on my projects  <br></p>
-    <div class="btnbdy"><button class="herobtn">
+    <div class="btnbdy"><button class="herobtn" id="button">
       Projects
     </button></div>
     </div>
@@ -70,6 +70,13 @@
       <li class="git"><a href="https://github.com/mani-monga" target="_">GitHub <i class="fa fa-github"></i></a></li>
     </ul>
   </nav>
+<a href="../ResumeFinal.pdf" download="ManiMongaResume">
+<button id="download">
+   <img width="20px" height="20px" src="/downlaod.gif" alt="">
+   <span>Download CV</span>
+</button></a>
+
+
 </body>
 <script src="./js/index.js"></script>
 
