--- a/projects.html
+++ b/projects.html
@@ -220,6 +220,11 @@
             </li>
         </ul>
     </nav>
+    <a href="../ResumeFinal.pdf" download="ManiMongaResume">
+        <button id="download">
+           <img width="20px" height="20px" src="/downlaod.gif" alt="">
+           <span>Download CV</span>
+        </button></a>
 </body>
 <script src="../js/index.js"></script>
 
