--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1 >Hi <br></h1>
     <h2 >This is me, Mani Monga <br></h2>
     <p >This is my profile. I am a tech enthuciast.Currently I am working with Web Development. You can have a look on my projects  <br></p>
-    <div class="btnbdy"><button class="herobtn"><a href="./projects.html">
+    <div class="btnbdy"><button class="herobtn" id="button"><a href="./projects.html">
       Projects</a>
     </button></div>
     </div>
