--- a/projects.html
+++ b/projects.html
@@ -226,6 +226,6 @@
            <span>Download CV</span>
         </button></a>
 </body>
-<script src="../js/index.js"></script>
+<script src="./js/index.js"></script>
 
 </html>
